snapshots/parsers/cst/declarations/object_statement_multiple.snap
---
source: src/parsers/cst/declarations.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: VersionStatement
      children:
        - kind: VersionKeyword
          text: VERSION
        - kind: Whitespace
          text: " "
        - kind: SingleLiteral
          text: "5.00"
        - kind: Newline
          text: "\n"
    - kind: ObjectStatement
      children:
        - kind: ObjectKeyword
          text: Object
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: StringLiteral
          text: "\"{831FDD16-0C5C-11D2-A9FC-0000F8754DA1}#2.0#0\""
        - kind: Semicolon
          text: ;
        - kind: Whitespace
          text: " "
        - kind: StringLiteral
          text: "\"mscomctl.ocx\""
        - kind: Newline
          text: "\n"
    - kind: ObjectStatement
      children:
        - kind: ObjectKeyword
          text: Object
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: StringLiteral
          text: "\"{F9043C88-F6F2-101A-A3C9-08002B2F49FB}#1.2#0\""
        - kind: Semicolon
          text: ;
        - kind: Whitespace
          text: " "
        - kind: StringLiteral
          text: "\"COMDLG32.OCX\""
        - kind: Newline
          text: "\n"
